<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrond"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundopacity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:srcCompat="@drawable/download"
            android:contentDescription="@string/imgDescription"/>

        <TextView
            android:id="@+id/Dishtoday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_gredient"
            android:hapticFeedbackEnabled="true"
            android:text="@string/Login"
            android:textColor="#FBF8F8"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/startcolorgradient"
            app:backgroundTintMode="add" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_gredient"
            android:text="@string/register"
            android:textColor="#FDFAFA"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/startcolorgradient"
            app:backgroundTintMode="add" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>