<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Sign_in_activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    android:contentDescription="@string/imgDescription"
                    app:srcCompat="@drawable/download" />

                <TextView
                    android:id="@+id/Dishtoday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:paddingTop="30dp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="60sp" />


                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="User Name"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textSize="24sp" />


                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_gredient"
                    android:fontFamily="monospace"
                    android:hapticFeedbackEnabled="false"
                    android:text="@string/Login"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/startcolorgradient"
                    app:backgroundTintMode="add" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="20dp"
                        android:layout_height="2dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="#0E0E0E" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Or With"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="20dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="#0E0E0E" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/google2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="05dp"
                        android:layout_weight="1"
                        android:background="@drawable/googlecolor"
                        android:drawableLeft="@drawable/search"

                        android:gravity="center"
                        android:hapticFeedbackEnabled="false"
                        android:padding="17dp"
                        android:text="Google"
                        android:textSize="12sp"
                        app:backgroundTint="@color/startcolorgradient"
                        app:backgroundTintMode="add"
                        app:srcCompat="@drawable/search" />

                    <Button
                        android:id="@+id/facebook2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/fbcolor"
                        android:drawableLeft="@drawable/facebook"
                        android:gravity="center"
                        android:hapticFeedbackEnabled="false"
                        android:padding="17dp"
                        android:text="facebook"
                        android:textSize="12sp"

                        app:backgroundTint="@color/startcolorgradient"
                        app:backgroundTintMode="add"
                        app:srcCompat="@drawable/facebook" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="03dp"
                        android:background="#FFFFFF"
                        android:text="Want to Create an Account?"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>